Create template and new recipe

--- a/recipes/sausage-corn-chowder.html
+++ b/recipes/sausage-corn-chowder.html
@@ -10,18 +10,61 @@
     <h1>Sausage Corn Chowder</h1>
     <!--Add an image of the finished product here.-->
     <h2>Description</h2>
-    <p>Here will go a description about the recipe and dish.</p>
+    <p>This dish is a particular favorite of mine. Though perhaps
+        not a 'traditional' chowder, it is delicious,
+        simple to make, and does not take much time or too 
+        many ingredients. Perhaps the most marvelous aspect
+        of this recipe is that it serves as a template for 
+        chowders. The reader can at the appropriate stage 
+        substitute the sausage or corn for whichever protein 
+        and/or vegetable he or she desires.Also, a fish 
+        stock is preferrable if the protein is seafood.
+    </p>
     <h2>Ingredients</h2>
     <ul>
-        <li>Ingredient 1</li>
-        <li>Ingredient 2</li>
-        <li>Ingredient 3</li>
+        <li>1 Tbs Butter</li>
+        <li>1 Tbs cooking oil</li>
+        <li>3 cups of diced onions</li>
+        <li>1 bay leaf</li>
+        <li>1 cup of flour</li>
+        <li>4 cups of light chicken stock</li>
+        <li>1 pound of chopped, peeled potatoes.</li>
+        <li>Salt and Pepper to taste</li>
+        <li>2 cups of milk or light cream</li>
+        <li>1 package of Italian sausages</li>
+        <li>2 cups of frozen corn</li>
     </ul>
     <h2>Steps</h2>
     <ol>
-        <li>Step 1: Text explaining step 1.</li>
-        <li>Step 2: Text explaining step 2.</li>
-        <li>Step 3: Text explaining step 3.</li>
+        <li>Prep. Gather all ingredients. Peel and chop 
+            potatoes and onions. Remove sausages from cases.
+        </li>
+        <li>Heat stew pot or dutch oven over medium-high heat.
+            Add cooking oil, then add sausages. Break up the 
+            sausages into as small of pieces as possible while
+            they cook. Once browned and partially cooked, remove 
+            sausages to separate plate.
+        </li>
+        <li>Melt the butter in the pot. Stir in the onions and
+            bay leaf. Saute over medium-low heat until onions 
+            are tender and translucent which should take no more
+            than 10 minutes.
+        </li>
+        <li>Add the four cups of liquid to the pot. Bring to a 
+            boil and let it simmer, loosely covered, until 
+            potatoes are soft and easily pierced by a fork.
+        </li>
+        <li>Create a slurry with the flour and water. Add the 
+            slurry to the pot and stir vigorously to prevent 
+            clumps. Continue stirring until slurry is well 
+            incorporated and the chowder thickens.
+        </li>
+        <li>Mix in the milk/cream, corn, and sausage. Bring 
+            to a simmer for five minutes. While simmering, use a 
+            potato masher to mash the potatoes in the pot into 
+            smaller and more manageable chunks. Taste to correct
+            seasoning.
+        </li>
     </ol>
 </body>
 </html>
