--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="recipes/sausage-corn-chowder.html">Sausage Corn Chowder</a></li>
+        <li><a href="recipes/cream-of-mushroom-soup.html">Cream of Mushroom Soup</a></li>
     </ul>
 </body>
 </html>
