Modify cream of mushroom soup; add image and image folder

--- a/recipes/cream-of-mushroom-soup.html
+++ b/recipes/cream-of-mushroom-soup.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Cream of Mushroom Soup</h1>
-    <!--Add an image of the finished product here.-->
+    <img src="../images/cream-of-mushroom-soup.jpg">
     <h2>Description</h2>
     <p>If one is looking for a dark, creamy soup that can comfort
         and warm a person on even the coldest of days, then look
@@ -18,7 +18,8 @@
         work with this recipe. I prefer the flavors of the red.
         It is also fun to note that this soup tastes better the 
         second day. Perhaps it is worthwhile to cook it for dinner
-        the night before in order to fully enjoy it.
+        the night before in order to fully enjoy it. It tastes 
+        better than it looks, trust me.
     </p>
     <h2>Ingredients</h2>
     <ul>
